# TensorFlowOnSpark

./: .buildinfo  .gitignore  .gitmodules  .tidelift.yml  .travis.settings.xml  .travis.yml  Code-of-Conduct.md  Contributing.md  LICENSE  README.md  christinabrown75@yahoo.com  genindex.html  index.html  objects.inv  pom.xml  py-modindex.html  requirements.txt  screwdriver.yaml  sd.allow  search.html  searchindex.js  setup.cfg  setup.py  tensorflowonspark.TFCluster.html  tensorflowonspark.TFManager.html  tensorflowonspark.TFNode.html  tensorflowonspark.TFParallel.html  tensorflowonspark.TFSparkNode.html  tensorflowonspark.dfutil.html  tensorflowonspark.gpu_info.html  tensorflowonspark.html  tensorflowonspark.marker.html  tensorflowonspark.pipeline.html  tensorflowonspark.reservation.html  tensorflowonspark.reservation_client.html  tensorflowonspark.util.html  tox.ini
.doctrees/: environment.pickle  index.doctree  tensorflowonspark.TFCluster.doctree  tensorflowonspark.TFManager.doctree  tensorflowonspark.TFNode.doctree  tensorflowonspark.TFParallel.doctree  tensorflowonspark.TFSparkNode.doctree  tensorflowonspark.dfutil.doctree  tensorflowonspark.doctree  tensorflowonspark.gpu_info.doctree  tensorflowonspark.marker.doctree  tensorflowonspark.pipeline.doctree  tensorflowonspark.reservation.doctree  tensorflowonspark.reservation_client.doctree  tensorflowonspark.util.doctree
_modules/: index.html
_static/: documentation_options.js
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  tensorflowonspark.TFCluster.html  tensorflowonspark.TFManager.html  tensorflowonspark.TFNode.html  tensorflowonspark.TFSparkNode.html  tensorflowonspark.dfutil.html  tensorflowonspark.gpu_info.html  tensorflowonspark.html  tensorflowonspark.marker.html  tensorflowonspark.pipeline.html  tensorflowonspark.reservation.html  tensorflowonspark.reservation_client.html  tensorflowonspark.util.html
examples/: model_export.py
scripts/: ec2-cloud-config.txt  install_spark.sh  local-setup-hadoop.sh  local-setup-spark.sh  spark-ec2  spark_ec2.py  start_spark.sh  stop_spark.sh  travis_before_install.sh  travis_install_spark.sh
tensorflowonspark/: TFCluster.py  TFManager.py  TFNode.py  TFParallel.py  TFSparkNode.py  __init__.py  compat.py  dfutil.py  gpu_info.py  marker.py  pipeline.py  process_code.py  reservation.py  reservation_client.py  tensorflow_main.py  util.py
test/: README.md  run_tests.sh  test.py  test_TFCluster.py  test_TFNode.py  test_dfutil.py  test_pipeline.py  test_reservation.py
tests/: README.md  run_tests.sh  test.py  test_TFCluster.py  test_TFClusterNoReuseWorker.py  test_TFParallel.py  test_TFSparkNode.py  test_dfutil.py  (+2 more)
(+221 files in other folders)
